apps/dish-lab/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dish-lab
  namespace: apps
spec:
  selector:
    app: dish-lab
  ports:
    - port: 8000
      targetPort: 8000
