apps/dish-lab/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dish-lab
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: api.dish-lab.skravops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dish-lab
                port:
                  number: 8000
